--- a/distritos.html
+++ b/distritos.html
@@ -33,14 +33,14 @@
                                 <li><a class="dropdown-item" href="#D2">Distrito 2</a></li>
                                 <li><a class="dropdown-item" href="#D3">Distrito 3</a></li>
                                 <li><a class="dropdown-item" href="#D4">Distrito 4</a></li>
-                                <li><a class="dropdown-item" href="#D4">Distrito 5</a></li>
-                                <li><a class="dropdown-item" href="#D4">distrito 6</a></li>
-                                <li><a class="dropdown-item" href="#D4">Distrito 7</a></li>
-                                <li><a class="dropdown-item" href="#D4">Distrito 8</a></li>
-                                <li><a class="dropdown-item" href="#D4">Distrito 9</a></li>
-                                <li><a class="dropdown-item" href="#D4">Distrito 10</a></li>
-                                <li><a class="dropdown-item" href="#D4">Distrito 11</a></li>
-                                <li><a class="dropdown-item" href="#D4">Distrito 12</a></li>
+                                <li><a class="dropdown-item" href="#D5">Distrito 5</a></li>
+                                <li><a class="dropdown-item" href="#D6">distrito 6</a></li>
+                                <li><a class="dropdown-item" href="#D7">Distrito 7</a></li>
+                                <li><a class="dropdown-item" href="#D8">Distrito 8</a></li>
+                                <li><a class="dropdown-item" href="#D9">Distrito 9</a></li>
+                                <li><a class="dropdown-item" href="#D10">Distrito 10</a></li>
+                                <li><a class="dropdown-item" href="#D11">Distrito 11</a></li>
+                                <li><a class="dropdown-item" href="#D12">Distrito 12</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D2">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist2.jpg" alt="">
@@ -86,7 +86,7 @@
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D3">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist3.jpg" alt="">
@@ -96,12 +96,13 @@
                                 <h1>Distrito 3</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 3: Tecnologia. Considerado um dos distritos mais rebeldes, atualmente fornece todo o material científico e tecnológico.</p>
+                                <p>Distrito 3: Tecnologia.</p>
+                                <p>A habilidade com engenharia e tecnologia levou o Distrito 3 a se tornar fornecedor de eletrônicos para a Capital. Os participantes dos Jogos Vorazes, chamados de tributos, utilizam esses conhecimentos para tentar vencer a competição.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D4">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist4.jpg" alt="">
@@ -111,12 +112,13 @@
                                 <h1>Distrito 4</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 4: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                                <p>Distrito 4: Alvenaria e Armamentos.</p>
+                                <p>O extenso litoral do distrito fez com que ele assumisse um importante papel na alimentação de Panem, como produtor de pescados, e também a condição de um dos mais ricos distritos do país.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D5">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist5.jpg" alt="">
@@ -126,12 +128,13 @@
                                 <h1>Distrito 5</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 5: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                                <p>Distrito 5: Alvenaria e Armamentos.</p>
+                                <p>Embora seja especializado em pesquisa genética e também o maior produtor de energia de Panem, o distrito é totalmente dependente da Capital. A sua representante - chamada de tributo feminino - no reality show Jogos Vorazes é conhecida apenas como Cara de Raposa. Ela usa sua inteligência para sobreviver mais tempo na competição.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D6">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist6.jpg" alt="">
@@ -141,12 +144,13 @@
                                 <h1>Distrito 6</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 6: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                                <p>Distrito 6:</p>
+                                <p>Grande produtor de remédios, o distrito tem, como efeito colateral, que lidar com o vício em morfina de parte de seus cidadãos. O local desempenha também um papel importante no transporte dentro do temitório de Panem.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D7">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist7.jpg" alt="">
@@ -156,12 +160,13 @@
                                 <h1>Distrito 7</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 7: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                                <p>Distrito 7:</p>
+                                <p>Acredita-se que o distrito, que é especializado em madeira, possua uma área considerável com pinheiros, árvore comum na América do Norte. Os habitantes, que também se ocupam com a produção de papel, têm habilidade com machados, serras e outros instrumentos de corte.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D8">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist8.jpg" alt="">
@@ -171,12 +176,13 @@
                                 <h1>Distrito 8</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 8: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                                <p>Distrito 8:</p>
+                                <p>Com um grande parque têxtil, o distrito se encarrega da produção de tecidos de Panem. Ele faz os uniformes da força militar controlada pela Capital.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D9">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist9.jpg" alt="">
@@ -186,12 +192,13 @@
                                 <h1>Distrito 9</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 9: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                                <p>Distrito 9:</p>
+                                <p>Com muitas fábricas, ele é o responsável pelo processamento dos alimentos produzidos por outras regiões, como os peixes pescados pelo Distrito 4 e a came de animais abatidos no Distrito 10. Na arena dos Jogos Vorazes, o primeiro adversário da protagonista Katniss é um dos tributos - participantes do reality - oriundos do lugar.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D10">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist10.jpg" alt="">
@@ -201,12 +208,13 @@
                                 <h1>Distrito 10</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 10: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                                <p>Distrito 10:</p>
+                                <p>Região utilizada para a criação de animais, como o gado. Apesar disso, o lugar não processa alimentos, atividade realizada pelo Distrito 9. Seu tributo masculino - garoto que participa do reality show Jogos Vorazes - tem uma deficiência na perna que prejudica a sua locomoção durante a competição.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D11">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist11.jpg" alt="">
@@ -216,12 +224,13 @@
                                 <h1>Distrito 11</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 11: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                                <p>Distrito 11:</p>
+                                <p>Um dos maiores distritos de Panem, em extensão territorial, ele é responsável pela produção agrícola do país, fomecendo grãos, algodão e frutas para as outras regiões. Apesar da grande produção, a população não é bem alimentada e o distrito 11 é o segundo mais pobre do país -perde apenas para o 12.</p>
                             </div>
                         </div>
                     </div>
                 </section>
-                <section id="D1">
+                <section id="D12">
                     <div class="row">
                         <div class="col-md-6">
                             <img class="imglivro" src="img/img distritos/dist12.jpg" alt="">
@@ -231,7 +240,8 @@
                                 <h1>Distrito 12</h1>
                             </div>
                             <div class="textlivro">
-                                <p>Distrito 12: Alvenaria e Armamentos. É o centro de defesa da Capital, encarregado de treinar e abrigar Pacificadores.</p>
+                                <p>Distrito 12:</p>
+                                <p>Katniss e Peeta, os personagens principais da saga, nasceram nesse distrito. Katniss sustenta a família, formada por sua mãe e sua irmã mais nova, Prim. As atividades do mais pobre dos distritos de Panem, localizado nos Apalaches, se concentram na extração de carvão.</p>
                             </div>
                         </div>
                     </div>
