--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="distritos.html">Distritos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Personagens</a>
+                            <a class="nav-link" href="personagens.html">Personagens</a>
                         </li>
                     </ul>
                 </div>
@@ -183,7 +183,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Katniss Everdeen</h5>
                             <p class="card-text">É a protagonista da história. Ela tem dezesseis anos e vive na área mais pobre do Distrito 12, conhecida como Costura ou Jazigo, com sua mãe e sua irmã de doze anos, Primrose, apelidada de Prim.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="personagens.html" class="btn btn-primary">Veja Mais...</a>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Peeta Mellark</h5>
                             <p class="card-text">É o tributo masculino do Distrito 12. Tem dezesseis anos, é filho de um padeiro e vive na parte média do seu distrito. Tem cabelos loiros e olhos azuis, além de ser muito forte.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="personagens.html" class="btn btn-primary">Veja Mais...</a>
                             </div>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                             <div class="card-body">
                             <h5 class="card-title">Haymitch Abernathy</h5>
                             <p class="card-text">É o mentor de Peeta Mellark e Katniss Everdeen, e o tributo vencedor da 50ª edição dos Jogos Vorazes. Assim sendo no primeiro livro, o único tributo vencedor do Distrito 12 ainda vivo distrito.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="personagens.html" class="btn btn-primary">Veja Mais...</a>
                             </div>
                         </div>
                     </div>
@@ -212,8 +212,8 @@
                             <img src="img/img cards/Gale.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">Gale Hawthorne</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">É o melhor amigo de Katniss. Ele tem dezoito anos. Ambos se encontraram na floresta, alguns anos antes do início dos acontecimentos do livro, ocasião em que se tornaram melhores amigos e parceiros de caça.</p>
+                            <a href="personagens.html" class="btn btn-primary">Veja Mais...</a>
                             </div>
                         </div>
                     </div>
@@ -222,8 +222,8 @@
                             <img src="img/img cards/Effie.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">Effie Trinket</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">É a companheira dos tributos do Distrito 12 (Peeta e Katniss), vindo diretamente da Capital. Effie usa roupas e penteados de cabelo muito extravagantes, Ela é quem realiza a Colheita no mesmo distrito.</p>
+                            <a href="personagens.html" class="btn btn-primary">Veja Mais...</a>
                             </div>
                         </div>
                     </div>
@@ -232,8 +232,8 @@
                             <img src="img/img cards/Primrose.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                             <h5 class="card-title">Primrose Everdeen</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">É a irmã mais nova de Katniss Everdeen. Prim é o oposto de Katniss em aparência e caráter. Tem o cabelo loiro como a mãe, uma personalidade gentil e um talento para a cura, enquanto Katniss tinha um talento para a caça.</p>
+                            <a href="personagens.html" class="btn btn-primary">Veja Mais...</a>
                             </div>
                         </div>
                     </div>
@@ -244,40 +244,40 @@
                     <h1>Distritos</h1>
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 1 ou a Capital</a>,comada Panem inteira, onde se localizam as pessoas mais ricas do país, incluindo o presidente(a).
+                    O <a href="distritos.html" class="alert-link">Distrito 1 ou a Capital</a>,comada Panem inteira, onde se localizam as pessoas mais ricas do país, incluindo o presidente(a).
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 2</a>, é o mais leal à Capital.
+                    O <a href="distritos.html" class="alert-link">Distrito 2</a>, é o mais leal à Capital.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 3</a>, tem habilidades com engenharia e tecnologia.
+                    O <a href="distritos.html" class="alert-link">Distrito 3</a>, tem habilidades com engenharia e tecnologia.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 4</a>, é responsável pela comida de Panem.
+                    O <a href="distritos.html" class="alert-link">Distrito 4</a>, é responsável pela comida de Panem.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 5</a>, é o maior produtor de energia de Panem.
+                    O <a href="distritos.html" class="alert-link">Distrito 5</a>, é o maior produtor de energia de Panem.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 6</a>, é um grande produtor de remédios.
+                    O <a href="distritos.html" class="alert-link">Distrito 6</a>, é um grande produtor de remédios.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 7</a>, é especializado pela carpintaria.
+                    O <a href="distritos.html" class="alert-link">Distrito 7</a>, é especializado pela carpintaria.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 8</a>, é espeicalizado na área têxtil.
+                    O <a href="distritos.html" class="alert-link">Distrito 8</a>, é espeicalizado na área têxtil.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 9</a>, é a região industrializada, onde processa diversos recursos feitos de outras regiões do país.
+                    O <a href="distritos.html" class="alert-link">Distrito 9</a>, é a região industrializada, onde processa diversos recursos feitos de outras regiões do país.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 10</a>, é a região rural de Panem.
+                    O <a href="distritos.html" class="alert-link">Distrito 10</a>, é a região rural de Panem.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 11</a>, é a região agrícola do país.
+                    O <a href="distritos.html" class="alert-link">Distrito 11</a>, é a região agrícola do país.
                 </div>
                 <div class="alert alert-info" role="alert">
-                    O <a href="#" class="alert-link">Distrito 12</a>, é especializado na energia nuclear.
+                    O <a href="distritos.html" class="alert-link">Distrito 12</a>, é especializado na energia nuclear.
                 </div>
             </section>
             <section>
@@ -287,7 +287,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div>
-                            <p>Suzanne Marie Collins (Hartford, 10 de agosto de 1962) é uma escritora e roteirista de ficção científica e literatura infanto-juvenil americana, conhecida pela trilogia Jogos Vorazes que virou filme sob título homônimo em 2012. Seus livros já venderam mais de 85 milhões de cópias no mundo todo.</p>
+                            <p><a class="vermelho" href="autora.html">Suzanne Marie Collins</a> (Hartford, 10 de agosto de 1962) é uma escritora e roteirista de ficção científica e literatura infanto-juvenil americana, conhecida pela trilogia Jogos Vorazes que virou filme sob título homônimo em 2012. Seus livros já venderam mais de 85 milhões de cópias no mundo todo.</p>
                             <p>Ela é filha de Jane Brady Collins e do tenente-coronel Michael John Collins (1931-2003), um oficial da Força Aérea dos EUA que serviu na Guerra da Coreia e Guerra do Vietnã, e foi premiado com a Distinguished Flying Cross e a Estrela de Bronze. É a mais nova de quatro filhos, como filha de um oficial militar, ela e sua família estavam sempre se mudando.</p>
                         </div>
                     </div>
