--- a/autora.html
+++ b/autora.html
@@ -64,4 +64,7 @@
 
         <script src="js\bootstrap.bundle.js"></script>
     </body>
+    <footer>
+        <p class="foot">Desenvolvido por Guilherme Nakamura Carvalho</p>
+    </footer>
 </html>
